-z-index fix

--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -13,7 +13,7 @@ $text-blue: #3eb3cc
   flex-direction: column
   align-items: center
   justify-content: space-between
-  z-index: 1000
+  z-index: 1001
   box-shadow: 0px 4px 8px rgba(0,0,0,0.4)
 
   .logo
